--- a/templates/public/public-layout/menu.html
+++ b/templates/public/public-layout/menu.html
@@ -11,7 +11,7 @@
                             <div class="item-icon">
                                 <img src="{% static 'assets/images/icon/icon.svg' %}" alt="icon Images">
                             </div>
-                            <a href="index.html" class="item-content">
+                            <a href="#" class="item-content">
                                 <h5 class="item-title">Télécharger l'Appli mobile</h5>
                                 <span class="item-sub">application</span>
                             </a>
@@ -20,7 +20,7 @@
                             <div class="item-icon">
                                 <img src="{% static 'assets/images/icon/icon2.svg' %}" alt="icon Images">
                             </div>
-                            <a href="index-music.html" class="item-content">
+                            <a href="https://abmci.com/donation" class="item-content">
                                 <h5 class="item-title">Soutenir la Conference</h5>
                                 <span class="item-sub">Soutenir</span>
                             </a>
@@ -29,7 +29,7 @@
                             <div class="item-icon">
                                 <img src="{% static 'assets/images/icon/icon3.svg' %}" alt="icon Images">
                             </div>
-                            <a href="index-eventbrite.html" class="item-content">
+                            <a href="http://abmci.com" class="item-content">
                                 <h5 class="item-title">Les Eglises ABMCI</h5>
                                 <span class="item-sub">Sessions ABMCI</span>
                             </a>
@@ -38,7 +38,7 @@
                             <div class="item-icon">
                                 <img src="{% static 'assets/images/icon/icon4.svg' %}" alt="icon Images">
                             </div>
-                            <a href="index-dark.html" class="item-content">
+                            <a href="https://abmci.com/nous-contacter" class="item-content">
                                 <h5 class="item-title">Nous contacter</h5>
                                 <span class="item-sub">Contact</span>
                             </a>
@@ -60,9 +60,9 @@
                               <li class="nav-item">
                                  <a href="#schedule" class="nav-link py-3"> Programme</a>
                               </li>
-                              <li class="nav-item">
-                                 <a href="#sponsors" class="nav-link py-3"> Partenaires</a>
-                              </li>
+{#                              <li class="nav-item">#}
+{#                                 <a href="#sponsors" class="nav-link py-3"> Partenaires</a>#}
+{#                              </li>#}
                               <li class="nav-item">
                                  <a href="#speakers" class="nav-link py-3"> Orateurs</a>
                               </li>
