--- a/templates/public/public-page/home.html
+++ b/templates/public/public-page/home.html
@@ -8,8 +8,7 @@
     <div class="info-sec">
     <div class="container">
         <div class="info-countdown" style="background-image: url({% static 'assets/images/banner/bg.png' %});">
-            <ul class="counter-box d-flex justify-content-around" id="countdown"
-                data-countdown="{% if prochaine_session %}{{ prochaine_session.start_time|date:'Y/m/d H:i:s' }}{% else %}2025/03/10 18:00:00{% endif %}">
+            <ul class="counter-box d-flex justify-content-around" data-countdown="{% if prochaine_session %}{{ prochaine_session.start_time|date:'Y/m/d H:i:s' }}{% else %}2025/03/10 18:00:00{% endif %}">
             </ul>
             <div class="dots img-moving-anim2">
                 <img src="{% static 'assets/images/dots/dots3.png' %}" alt="Shadow Image">
@@ -258,7 +257,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                 </div>
                                 <div class="card-button col-5">
                                     <button class="custom-btn2" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                      {% trans "S'enregistrer" %} 
+                                      {% trans "S'enregistrer" %}
                                     </button>
                                 </div>
                             </div>
