--- a/templates/public/public-layout/base.html
+++ b/templates/public/public-layout/base.html
@@ -3,10 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>CONFERENCE D'ABIDJAN 25</title>
+    {% include './meta_data.html' %}
    
    <!-- google font -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
