--- a/templates/public/public-layout/meta_data.html
+++ b/templates/public/public-layout/meta_data.html
@@ -43,7 +43,7 @@
     <link rel="canonical" href="https://www.conferencedabidjan.com">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://www.conferencedabidjan.com/assets/favicon.png">
+    <link rel="icon" type="image/png" href="https://www.conferencedabidjan.com/static/assets/favicon.png">
 
     <!-- Balises pour Google Site Verification et autres -->
     <meta name="google-site-verification" content="TON-CODE-DE-VERIFICATION-GOOGLE">
