--- a/templates/public/public-layout/meta_data.html
+++ b/templates/public/public-layout/meta_data.html
@@ -33,7 +33,7 @@
     <meta property="og:locale" content="fr_FR">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
-<meta property="og:site_name" content="Conférence d'Abidjan">mnbvcw
+<meta property="og:site_name" content="Conférence d'Abidjan">
 <meta property="og:image:alt" content="Conférence d'Abidjan 2025 - Un événement incontournable pour les leaders spirituels et professionnels">
 
 
